@@ -2428,12 +2428,20 @@ If you set `term-file-prefix' to nil, this function does nothing."
   :version "22.1")
 
 (defface nobreak-space
-  '((((class color) (min-colors 88)) :inherit escape-glyph :underline t)
-    (((class color) (min-colors 8)) :background "magenta")
-    (t :inverse-video t))
+  '((((background dark)) :foreground "cyan")
+    (((type pc)) :foreground "magenta")
+    (t :foreground "brown"))
   "Face for displaying nobreak space."
   :group 'basic-faces
   :version "22.1")
+
+(defface nobreak-hyphen
+  '((((background dark)) :foreground "cyan")
+    (((type pc)) :foreground "magenta")
+    (t :foreground "brown"))
+  "Face for displaying nobreak hyphens."
+  :group 'basic-faces
+  :version "25.2")
 
 (defgroup mode-line-faces nil
   "Faces used in the mode line."
