@@ -56,6 +56,9 @@ affected by this, as SGI stopped supporting IRIX in December 2013.
 
 * Changes in Emacs 25.2
 
+** Non-breaking hypens are now displayed with the `nobreak-hyphen'
+face instead of the `escape-glyph' face.
+
 ---
 ** `C-x h' (`mark-whole-buffer') will now avoid marking the prompt
 part of minibuffers.
